leptos_macro/tests/view/10_generic_prop_wrong_type_short_form.stderr
error[E0277]: `bool` is not a valid type for prop `generic_fun` on component `Inner`
  --> tests/view/10_generic_prop_wrong_type_short_form.rs:13:36
   |
11 | /     view! {
12 | |         <div>
13 | |             <Inner concrete_i32=42 generic_fun>
   | |                                    ^^^^^^^^^^^ the trait `Fn()` is not implemented for `bool`
14 | |                 "foo"
15 | |             </Inner>
16 | |         </div>
17 | |     }
   | |_____- required by a bound introduced by this call
   |
   = note: required: `Fn() -> bool`
note: required for `bool` to implement `__Inner_PropBound_generic_fun`
  --> tests/view/10_generic_prop_wrong_type_short_form.rs:20:1
   |
20 | #[component]
   | ^^^^^^^^^^^^
21 | fn Inner<F>(
   |    ^^^^^
...
27 |     F: Fn() -> bool,
   |        ------------ unsatisfied trait bound introduced here
note: required by a bound in `Inner__::__check_generic_fun`
  --> tests/view/10_generic_prop_wrong_type_short_form.rs:21:4
   |
20 | #[component]
   | ------------ required by a bound in this associated function
21 | fn Inner<F>(
   |    ^^^^^ required by this bound in `Inner__::__check_generic_fun`
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `__pass` exists for struct `__Inner_Wrap_generic_fun<bool>`, but its trait bounds were not satisfied
  --> tests/view/10_generic_prop_wrong_type_short_form.rs:13:36
   |
11 | /     view! {
12 | |         <div>
13 | |             <Inner concrete_i32=42 generic_fun>
   | |                                   -^^^^^^^^^^^ method cannot be called on `__Inner_Wrap_generic_fun<bool>` due to unsatisfied trait bounds
   | |___________________________________|
   |
...
20 |   #[component]
   |   ------------ method `__pass` not found for this struct because it doesn't satisfy `_: __PropPass`
   |
note: trait bound `bool: __Inner_PropBound_generic_fun` was not satisfied
  --> tests/view/10_generic_prop_wrong_type_short_form.rs:21:4
   |
20 | #[component]
   | ------------
21 | fn Inner<F>(
   |    ^^^^^ unsatisfied trait bound introduced here
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `__pass`, perhaps you need to implement it:
           candidate #1: `leptos::prelude::__PropPass`
